--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.0.0-beta.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
